src/types/tests/snapshots/tgbot__types__tests__message__forward_message.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "from_chat_id": 2,
  "message_id": 3
}
